--- a/public/lang/esp.json
+++ b/public/lang/esp.json
@@ -159,9 +159,9 @@
     "title": "Únete",
     "intro": "Déjanos tus datos y te contactaremos a la brevedad.",
     "name": "Nombre:",
-    "company": "Empresa:",
+    "company": "LinkedIn (URL):",
     "email": "Correo:",
-    "phone": "Teléfono (opcional):",
+    "phone": "Área de interés:",
     "country": "País",
     "details": "Descripción del requerimiento:",
     "specialist": "Deseo agendar una reunión con un especialista",
