--- a/public/lang/eng.json
+++ b/public/lang/eng.json
@@ -19,53 +19,62 @@
 
 
   "overview": {
-    "title": "Highlights",
-    "1st": "Production",
-    "1st_par": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
-    "2nd": "Innovation",
-    "2nd_par": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
-    "3rd": "Cashflow",
-    "3rd_par": "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+    "title": "GMN 2025",
+    "subtitle": "\"Solo en este año, GMN ha ayudado a las empresas a ahorrar más de --- millones de dólares.\"",
+    "1st": "Valor creado por GMN",
+    "1st_par1": "+20 años de experiencia en minería y sectores intensivos en capital",
+    "1st_par2": "+8 operaciones mineras apoyadas en Chile y Latinoamérica",
+    "1st_par3": "+200.000 Órdenes de Trabajo regularizadas y optimizadas en SAP PM",
+    "1st_par4": "Experiencia real en proyectos de alta criticidad y gran escala",
+    "casosexito": "Ver nuestros casos de éxito",
+    "card1": "$200",
+    "card1_sub": "MILLONES",
+    "card2": "",
+    "card2_sub": "reducción de costos",
+    "card3": "24%",
+    "card3_sub": "más eficiencia"
   },
+
 
 
   "news": {
     "title": "News",
-    "1st": "About low productivity",
-    "1st_par": "Sergio Adauy, CEO of the local company in Antofagasta, GMN, regarding the challenges faced by the mining industry in terms of competitiveness. This topic has gained relevance amidst rising production costs, as well as other external factors such as the decline in mineral quality and the scarcity of water resources. Sergio Adauy, CEO of the local company in Antofagasta, GMN, regarding the challenges faced by the mining industry in terms of competitiveness. This topic has gained relevance amidst rising production costs, as well as other external factors such as the decline in mineral quality and the scarcity of water resources.",
-    "2nd": "Innovation",
+    "1st": "Sobre la baja de productividad",
+    "1st_par": "Sergio Adauy, director ejecutivo de la empresa local de Antofagasta, GMN, en relación a los desafíos que enfrenta la industria minera en términos de competitividad. Este tema ha cobrado relevancia en medio del aumento de los costos de producción, así como otros factores externos como la disminución de la calidad de los minerales y la escasez de recursos hídricos. Sergio Adauy, director ejecutivo de la empresa local de Antofagasta, GMN, en relación a los desafíos que enfrenta la industria minera en términos de competitividad. Este tema ha cobrado relevancia en medio del aumento de los costos de producción, así como otros factores externos como la disminución de la calidad de los minerales y la escasez de recursos hídricos.",
+    "2nd": "Innovacion",
     "2nd_par": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
-    "3rd": "Cashflow",
+    "3rd": "Montos",
     "3rd_par": "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
   },
 
 
 
   "somos": {
-    "title": "About Us",
-    "intro": "Introduction",
-    "intro_par": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
-    "vision": "Vision",
+    "title": "¿Quiénes somos?",
+    "intro": "Introducción",
+    "intro_par1": "Somos Global Maintenance Network (GMN / GSAPGROUP), una consultora latinoamericana con más de 25 años elevando el desempeño de organizaciones intensivas en capital.",
+    "intro_par2": " Ponemos el talento de nuestro equipo al servicio de cada operación, integrándonos a los objetivos del cliente con disciplina, análisis profundo y una ejecución que transforma los desafíos en mejoras sostenibles.",
+    "intro_par3": "Nuestra trayectoria en maximización de producción, optimización de costos y confiabilidad de activos nos ha permitido impulsar a líderes industriales en Chile y Latinoamérica con resultados medibles y sostenidos en el tiempo.",
+    "vision": "Visión",
     "vision_par": "Ser líderes globales en consultoría de Gestión de Activos Físicos, impulsados por equipos de alto desempeño que contribuyan al desarrollo y éxito constante de nuestros clientes.",
-    "mision": "Mision",
+    "mision": "Misión",
     "mision_par": "Brindar soluciones oportunas y eficaces a los problemas de competitividad y sustentabilidad de nuestros clientes, aumentando su Valor Económico Agregado (EVA) a través de un crecimiento sostenible."
   },
 
 
     "somos2": {
-    "title": "Lead Team",
-    "intro": "Introduction",
-    "intro_par": "\"Since our beginnings, we have maintained the same conviction: making things happen.\""
+    "title": "Equipo Directivo",
+    "intro": "Introducción",
+    "intro_par": "\"Desde nuestros inicios, mantenemos la misma convicción: hacer que las cosas pasen.\""
 
 
   },
 
   "hacemos": {
-    "title": "Our Job",
-    "intro": "",
-    "intro_par1": "Transformamos mantenimiento, datos y experiencia en valor operacional. En GMN - Global Maintenance Network, ayudamos a empresas de minería, energía, petróleo y otras industrias intensivas en capital a mejorar la confiabilidad, reducir costos unitarios y maximizar la disponibilidad de sus activos físicos.",
-    "intro_par2": "Lo hacemos combinando experiencia en terreno, metodología de clase mundial y tecnología aplicada para entregar resultados medibles y sostenibles."
-
+    "title": "¿Qué hacemos?",
+    "intro": "\"Transformamos operaciones tomando tus desafíos como propios.\"",
+    "intro_par1": "Acompañamos a organizaciones intensivas en capital a elevar su desempeño mediante soluciones de mejora operacional, gestión de activos y maximización de productividad. Nuestro modelo, validado en minería, energía, manufactura, forestal, alimentos y bebidas, logística, aeronáutica, agricultura y acuicultura, combina diagnóstico experto, implementación rigurosa y adopción sostenible.",
+    "intro_par2": "Operamos en toda Latinoamérica, apoyando a las compañías con metodologías propias, innovación aplicada e integración tecnológica que impulsa decisiones en tiempo real."
 
   },
 
@@ -73,18 +82,21 @@
 
   "servicios": {
     "title": "Nuestros Servicios",
-    "service1": "Gestión de Activos y Confiabilidad",
-    "service1_par1": "Implementamos estrategias de mantenimiento centradas en la confiabilidad (RCM), asegurando que cada intervencion aporte valor real al negocio.",
-    "service1_par2": "Menos fallas, más disponibilidad, decisiones basadas en datos.",
+    "service1": "Maximización de Producción",
+    "service1_par1": "Impulsamos el rendimiento operacional asegurando que los activos críticos cumplan y superen los niveles de producción para los cuales fueron diseñados.",
+    "service1_par2": "Aplicamos metodologías avanzadas de confiabilidad para diagnosticar el comportamiento real de los equipos, identificar restricciones sistémicas y eliminar fallas que afectan la continuidad operacional. Nuestro análisis va desde la cadena completa de valor hasta la intervención puntual en cada activo, permitiendo alcanzar niveles superiores de disponibilidad y rendimiento.",
+    "service1_par3": "El impacto es directo: más toneladas procesadas, ciclos operacionales más estables y una operación alineada a la producción meta con precisión técnica y disciplina operacional.",
 
-    "service2": "Optimización SAP PM / GSAP",
-    "service2_par1": "Diseñamos, configuramos y optimizamos plataformas SAP PM / EAM para alinear procesos técnicos con objetivos operacionales.",
-    "service2_par2": "Integramos personas, procesos y tecnología con visión de negocio.",
+    "service2": "Reducción de costos",
+    "service2_par1": "Convertimos ineficiencias invisibles en ahorros concretos.",
+    "service2_par2": "Reducimos los costos operacionales mediante la identificación de ineficiencias estructurales y la optimización de los recursos clave del negocio.",
+    "service2_par3": "Nuestra metodología propia de optimización de inventarios permite recuperar activos que ya no generan retorno, eliminar sobrestock histórico y ordenar procesos que hoy generan pérdidas silenciosas. Complementamos esto con estrategias de mantenimiento diseñadas para evitar fallas costosas y maximizar la vida útil de cada equipo.",
+    "service2_par4": "El resultado es una estructura de costos más competitiva, con decisiones sustentadas en datos y un control financiero operacional que impacta directamente la rentabilidad del negocio.",
 
-    "service3": "Análitica y Business Intelligence",
-    "service3_par1": "Desarrollamos dashboards y modelos de análisis que transforman datos en decisiones.",
-    "service3_par2": "Usamos Python, Power BI y metodologías SAP para visibilizar desempeño, backlog y costos en tiempo real.",
-    "service3_par3": "De la data al valor: cada KPI cuenta una historia.",
+    "service3": "Innovación",
+    "service3_par1": "Llevamos a nuestros clientes a un nivel superior de gestión mediante soluciones digitales que integran datos, inteligencia artificial y automatización.",
+    "service3_par2": "Desarrollamos asistentes virtuales capaces de entregar insights operacionales en tiempo real, detectando desviaciones y proponiendo acciones inmediatas basadas en modelos analíticos. Integramos SAP, Power BI y diversas fuentes de información para disponibilizar datos críticos.",
+    "service3_par3": "Esto habilita la toma de decisiones instantánea para ejecutivos y equipos operacionales, elevando la eficiencia, la agilidad y la predictibilidad de toda la operación.",
 
     "service4": "Servicios en Terreno, Coaching y Gestión del Cambio",
     "service4_par1": "Consultores \"hands on\" que trabajan codo a codo con los equipos del cliente, entregando soporte operativo, capacitación y aseguramiento de calidad para que cada mejora se implemente, se adopte y perdure en el tiempo.",
@@ -115,22 +127,28 @@
     "title": "Filosofía",
 
     "filo1": "Frase inicial",
-    "filo1_par1": "...",
+    "filo1_par1": "\"NOS INVOLUCRAMOS CON TUS DESAFÍOS COMO SI FUERAN PROPIOS, ACOMPAÑÁNDOTE CON COMPROMISO Y RESULTADOS SOSTENIBLES.\"",
 
     "filo2": "Cultura empresarial",
-    "filo2_par1": "...",
+    "filo2_par1": "Construimos relaciones de largo plazo sustentadas en confianza, compromiso y una excelencia técnica que hemos perfeccionado durante décadas. Nos integramos de manera natural a los equipos del cliente, trabajando con rigor, cercanía y una disciplina orientada al valor que garantiza ejecución impecable y mejoras que se consolidan en la operación.",
+    "filo2_par2": "En GMN no solo asesoramos: aseguramos implementación efectiva, adopción sostenida y resultados que realmente perduran.",
 
     "filo3": "Certificaciones y estándares",
+    "filo3_par0": "Promovemos el aprendizaje continuo, altos estándares de seguridad y una gestión responsable hacia las personas y el entorno.",
     "filo3_par1": "GMN es una empresa Trinorma, certificada bajo estándares internacionales:",
     "filo3_par1_l1": "ISO 9001:2015 – Gestión de calidad",
     "filo3_par1_l2": "ISO 14001:2015 – Gestión ambiental",
     "filo3_par1_l3": "ISO 45001:2018 – Seguridad y salud ocupacional",
-    "filo3_par2": "Estas certificaciones respaldan nuestro compromiso con la mejora continua, la sostenibilidad y el bienestar de nuestro equipo y entorno.",
+    "filo3_par2": " Estamos acreditados en el sistema SICEP con Categoría A, destacando el 100 % en calidad, medioambiente y automatización, lo que respalda nuestra gestión integral, segura y sostenible.",
 
 
 
     "filo4": "Excelencia técnica y humana",
-    "filo4_par1": "..."
+    "filo4_par1": "Nuestro valor está en las personas; consultores con experiencia comprobada que hacen que las cosas pasen.",
+    "filo4_par2": "Nuestro equipo reúne más de 25 años de experiencia combinada en confiabilidad operacional, estrategias de mantenimiento, implementación y optimización SAP PM/S4HANA, gestión de inventarios y analítica avanzada aplicada directamente a operaciones intensivas en capital",
+    "filo4_par3": " La experiencia en terreno y la disciplina técnica son parte de nuestro ADN corporativo.",
+
+    "filo4_btn": "Conócenos más"
 
   },
   
@@ -145,21 +163,27 @@
     "details": "Descripción del requerimiento:",
     "specialist": "Deseo agendar una reunión con un especialista",
     "sent": "Enviar",
+    "sending": "Enviando...",
     "confirmation": "¡Gracias! Tu mensaje ha sido enviado correctamente."
   },
 
-  
   "trabaja": {
-    "title": "Join Us",
+    "title": "Únete",
     "intro": "Déjanos tus datos y te contactaremos a la brevedad.",
     "name": "Nombre:",
-    "company": "Empresa:",
     "email": "Correo:",
-    "phone": "Teléfono (opcional):",
     "country": "País",
-    "details": "Descripción del requerimiento:",
-    "specialist": "Deseo agendar una reunión con un especialista",
+    "linkedin": "LinkedIn (URL):",
+    "area": "Área de interés:",    
+    "area1": "Marketing",    
+    "area2": "Consultoría",    
+    "area3": "Investigación",    
+    "area4": "Gestión",    
+    "cv": "CV (PDF)", 
     "sent": "Enviar",
+    "sending": "Enviando...",
     "confirmation": "¡Gracias! Tu mensaje ha sido enviado correctamente."
   }
+
+
 }
