ajustes de diseño

--- a/public/lang/esp.json
+++ b/public/lang/esp.json
@@ -30,9 +30,9 @@
     "card1": "$200",
     "card1_sub": "MILLONES",
     "card2": "",
-    "card2_sub": "reducción de costos",
+    "card2_sub": "REDUCCIÓN DE COSTOS",
     "card3": "24%",
-    "card3_sub": "más eficiencia"
+    "card3_sub": "MÁS EFICIENCIA"
   },
 
 
