--- a/public/lang/esp.json
+++ b/public/lang/esp.json
@@ -20,12 +20,12 @@
 
   "overview": {
     "title": "GMN en 2025",
-    "subtitle": "\"Solo en este año, GMN ha ayudado a las empresas a ahorrar más de --- millones de dólares.\"",
+    "subtitle": "\"Solo en este año, GMN ha ayudado a las empresas a ahorrar más de 200 millones de dólares.\"",
     "1st": "Valor creado por GMN",
-    "1st_par1": "+20 años de experiencia en minería y sectores intensivos en capital",
-    "1st_par2": "+8 operaciones mineras apoyadas en Chile y Latinoamérica",
-    "1st_par3": "+200.000 Órdenes de Trabajo regularizadas y optimizadas en SAP PM",
-    "1st_par4": "Experiencia real en proyectos de alta criticidad y gran escala",
+    "1st_par1": "+20 años de experiencia en minería y sectores intensivos en capital.",
+    "1st_par2": "+8 operaciones mineras apoyadas en Chile y Latinoamérica.",
+    "1st_par3": "+200.000 Órdenes de Trabajo regularizadas y optimizadas en SAP PM.",
+    "1st_par4": "Experiencia real en proyectos de alta criticidad y gran escala.",
     "casosexito": "Ver nuestros casos de éxito",
     "card1": "$200",
     "card1_sub": "MILLONES",
