--- a/public/lang/prt.json
+++ b/public/lang/prt.json
@@ -29,11 +29,10 @@
     "card1": "$200",
     "card1_sub": "MILLONES",
     "card2": "",
-    "card2_sub": "reducción de costos",
+    "card2_sub": "REDUCCIÓN DE COSTOS",
     "card3": "24%",
-    "card3_sub": "más eficiencia"
+    "card3_sub": "MÁS EFICIENCIA"
   },
-
 
 
   "news": {
@@ -182,6 +181,24 @@
     "sent": "Enviar",
     "sending": "Enviando...",
     "confirmation": "¡Gracias! Tu mensaje ha sido enviado correctamente."
+  },
+
+
+  "misc": {
+    "vermas": "Ver más",
+    "vermenos": "Ver menos",
+    "conocenos": "Conócenos más"
+  },
+
+  "exitos": {
+    "bhp": "Más de X proyectos desarrollados: productividad, optimización y gestión de activos, generando un valor agregado aproximado de $ XXXX MUSD.",
+    "codelco": "Empresa estatal chilena dedicada a la explotación minera cuprífera. Hemos desarrado con éxito más de X proyectos, impulsando estandares de operación y logística, los cuales han logrado un aumento en la productividad del X%.",
+    "cerromatoso": "Se han desarrollado modelos de datos y dashboars automatizados, los cuales han generado una reducción de X horas operacionales a la semana para el personal beneficiado.",
+    "cocacola": "",
+    "glencore": "",
+    "antapaccay": "",
+    "spence": "",
+    "sierragorda": ""
   }
 
 
