--- a/public/lang/esp.json
+++ b/public/lang/esp.json
@@ -56,9 +56,9 @@
     "intro_par2": " Ponemos el talento de nuestro equipo al servicio de cada operación, integrándonos a los objetivos del cliente con disciplina, análisis profundo y una ejecución que transforma los desafíos en mejoras sostenibles.",
     "intro_par3": "Nuestra trayectoria en maximización de producción, optimización de costos y confiabilidad de activos nos ha permitido impulsar a líderes industriales en Chile y Latinoamérica con resultados medibles y sostenidos en el tiempo.",
     "vision": "Visión",
-    "vision_par": "Ser líderes globales en consultoría de Gestión de Activos Físicos, impulsados por equipos de alto desempeño que contribuyan al desarrollo y éxito constante de nuestros clientes.",
+    "vision_par": "Ser la consultora líder en gestión de activos en Latinoamérica, reconocida globalmente por elevar el desempeño de organizaciones intensivas en capital y por equipos capaces de generar impacto real y sostenido.",
     "mision": "Misión",
-    "mision_par": "Brindar soluciones oportunas y eficaces a los problemas de competitividad y sustentabilidad de nuestros clientes, aumentando su Valor Económico Agregado (EVA) a través de un crecimiento sostenible."
+    "mision_par": "Potenciar a nuestros clientes para que capturen el máximo valor de sus activos físicos mediante soluciones especializadas, con foco en resultados medibles y sostenidos."
   },
 
 
